--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "fs": "0.0.1-security",
+        "https": "^1.0.0",
         "msnodesqlv8": "^0.8.10",
         "mssql": "^6.1.0"
     }
